@@ -60,8 +60,9 @@ class BntDb
         }
     }
 
-    public static function initDb($db_host, $db_user, $db_pwd, $db_name, $db_type, $db_prefix, $db_port, $db_layer)
+    public static function initDb($db_layer)
     {
+        include './config/db_config.php';
         if ($db_layer == 'adodb')
         {
             // Add MD5 encryption for sessions, and then compress it before storing it in the database
