@@ -17,7 +17,6 @@
 //
 // File: global_includes.php
 
-require_once './config/db_config.php';          // Database variables
 require_once './global_defines.php';            // Defines used in a few places
 require_once './vendor/autoload.php';           // Load the auto-loader
 require_once './common.php';                    // Loads the boot-strap messy code for each page
