@@ -1,3 +1,7 @@
+TheKabal (11 May 2014)
+--------------------------------------
+Move database configuration include from global includes to inside the database class & init method itself. And then there were three (global_includes left)..
+
 TheKabal (7 May 2014)
 --------------------------------------
 Fix potential vulnerability, discovered thanks to RIPS security scanner
